Fix sending partial list of favicons on updates

FrameHostMsg_UpdateFaviconURL() contains a list of favicons that the
browser process expects to be complete (ContentFaviconDriver).

On favicon changes via Javascript, handled via
RenderFrameImpl::DidChangeIcon(), a partial list (filtered by icon
type) was sent. This is tricky to handle and not worth optimizing for,
so this patch proposes to instead always send the full list of favicons.

Bug: 833476
Change-Id: Ie62f2ddcddfa740b470aecb767ae70991ca09eb7
Reviewed-on: https://chromium-review.googlesource.com/1013464
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Peter Kotwicz <pkotwicz@chromium.org>
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551866}
Former-commit-id: 37e6023df7523f1339780f70fbb633382f686317