chrome/browser/favicon/content_favicon_driver_browsertest.cc
@@ -314,6 +314,25 @@ IN_PROC_BROWSER_TEST_F(ContentFaviconDriverTest,
       GetFaviconForPageURL(url, favicon_base::IconType::kFavicon).bitmap_data);
 }
 
+// Test that favicon changes via Javascript affecting a specific type (touch
+// icons) do not influence the rest of the types (favicons).
+IN_PROC_BROWSER_TEST_F(ContentFaviconDriverTest, ChangeTouchIconViaJavascript) {
+  ASSERT_TRUE(embedded_test_server()->Start());
+  GURL url = embedded_test_server()->GetURL(
+      "/favicon/page_change_touch_icon_via_js.html");
+
+  PendingTaskWaiter waiter(web_contents());
+  waiter.AlsoRequireTitle(base::ASCIIToUTF16("OK"));
+  ui_test_utils::NavigateToURLWithDisposition(
+      browser(), url, WindowOpenDisposition::CURRENT_TAB,
+      ui_test_utils::BROWSER_TEST_NONE);
+  waiter.Wait();
+
+  EXPECT_NE(
+      nullptr,
+      GetFaviconForPageURL(url, favicon_base::IconType::kFavicon).bitmap_data);
+}
+
 // Test that favicon mappings are removed if the page initially lists a touch
 // icon and later uses Javascript to remove it.
 #if defined(OS_ANDROID)
